--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,8 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="formazas.css" rel="stylesheet" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="webaruhaz.js" type="text/javascript"></script>
     </head>
     <body>
         <main>
