--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,11 +19,37 @@ and open the template in the editor.
                 <h1>Webáruház</h1>
             </header>
             <section>
-                
+                <form>
+                    <fieldset>
+                        <div>
+                        <label for="id">ID:</label>
+                        <input type="text" id="id" name="id" value="">
+                        </div>
+                        <div>
+                        <label for="nev">Termék neve:</label>
+                        <input type="text" id="nev" name="nev" value="">
+                        </div>
+                        <div>
+                        <label for="ar">Termék ára:</label>
+                        <input type="text" id="ar" name="ar" value="">
+                        </div>
+                        <div>
+                        <label for="tipus">Termék típusa:</label>
+                        <input type="text" id="tipus" name="tipus" value="">
+                        </div>
+                        <div>
+                        <label for="szin">Termék színe:</label>
+                        <input type="text" id="szin" name="szin" value="">
+                        </div>
+                    </fieldset>
+                    <br>
+                    <input type="button" id="OK" name="OK" value="OK">
+                </form>
             </section>
             <article>
                 
             </article>
             <footer>Bartucz Petra</footer>
+        </main>
     </body>
 </html>
