--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,8 +16,10 @@ and open the template in the editor.
     <body>
         <main>
             <header>
-                <h1>Webáruház</h1>
+                <h1>Bonbon és virág webáruház</h1>
+                <img src="kepek/bonbon.jpg" alt=""/>
             </header>
+            <br>
             <section>
                 <form>
                     <fieldset>
@@ -34,8 +36,8 @@ and open the template in the editor.
                         <input type="text" id="ar" name="ar" value="">
                         </div>
                         <div>
-                        <label for="tipus">Termék típusa:</label>
-                        <input type="text" id="tipus" name="tipus" value="">
+                        <label for="fajta">Termék fajtája:</label>
+                        <input type="text" id="fajta" name="fajta" value="">
                         </div>
                         <div>
                         <label for="szin">Termék színe:</label>
