--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>Bartucz Petra</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.png" type="image/png"/>
         <link href="formazas.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="webaruhaz.js" type="text/javascript"></script>
